--- a/notebooks/check_LAB_scaling.ipynb
+++ b/notebooks/check_LAB_scaling.ipynb
@@ -166,63 +166,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([  0.      , -16.788334, -28.658401], dtype=float32)"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# compute A range in Lab space\n",
     "\n",
     "def compute_ranges(image):\n",
-    "    color.rgb2lab(image.permute(1, 2, 0), illuminant='D50').max(axis=(0, 1))\n",
-    "    color.rgb2lab(image.permute(1, 2, 0), illuminant='D50').min(axis=(0, 1))\n",
-    "\n"
+    "    _permuted = image.permute(1, 2, 0)\n",
+    "    max_range = color.rgb2lab(_permuted, illuminant='D50').max(axis=(0, 1))\n",
+    "    min_range = color.rgb2lab(_permuted, illuminant='D50').min(axis=(0, 1))\n",
+    "\n",
+    "    return max_range, min_range"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  2%|▏         | 16/1000 [00:07<07:19,  2.24it/s]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[26], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m imgs \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m tqdm(\u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1000\u001b[39m)):\n\u001b[0;32m----> 6\u001b[0m     img, pal \u001b[38;5;241m=\u001b[39m \u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m      7\u001b[0m     imgs\u001b[38;5;241m.\u001b[39mappend(img)\n",
-      "File \u001b[0;32m~/Documents/repos/ConceptGuidedColorization/data_loader.py:121\u001b[0m, in \u001b[0;36mColorizationDataset.__getitem__\u001b[0;34m(self, idx)\u001b[0m\n\u001b[1;32m    118\u001b[0m img \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mTensor(img)\u001b[38;5;241m.\u001b[39mto(torch\u001b[38;5;241m.\u001b[39mfloat32)\n\u001b[1;32m    120\u001b[0m \u001b[38;5;66;03m# load palette as a torch tensor\u001b[39;00m\n\u001b[0;32m--> 121\u001b[0m palette \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpath\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mjoin\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpalette_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpalette_filenames\u001b[49m\u001b[43m[\u001b[49m\u001b[43midx\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    122\u001b[0m palette \u001b[38;5;241m=\u001b[39m rgb2lab(np\u001b[38;5;241m.\u001b[39masarray(palette)\n\u001b[1;32m    123\u001b[0m                             \u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m3\u001b[39m) \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m256\u001b[39m\n\u001b[1;32m    124\u001b[0m                             , illuminant\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mD50\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    126\u001b[0m palette \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mTensor(palette)\u001b[38;5;241m.\u001b[39mto(torch\u001b[38;5;241m.\u001b[39mfloat32)\n",
-      "File \u001b[0;32m~/anaconda3/envs/elec542project/lib/python3.10/site-packages/numpy/lib/_npyio_impl.py:466\u001b[0m, in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding, max_header_size)\u001b[0m\n\u001b[1;32m    464\u001b[0m _ZIP_SUFFIX \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mb\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPK\u001b[39m\u001b[38;5;130;01m\\x05\u001b[39;00m\u001b[38;5;130;01m\\x06\u001b[39;00m\u001b[38;5;124m'\u001b[39m  \u001b[38;5;66;03m# empty zip files start with this\u001b[39;00m\n\u001b[1;32m    465\u001b[0m N \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mformat\u001b[39m\u001b[38;5;241m.\u001b[39mMAGIC_PREFIX)\n\u001b[0;32m--> 466\u001b[0m magic \u001b[38;5;241m=\u001b[39m \u001b[43mfid\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43mN\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    467\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m magic:\n\u001b[1;32m    468\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mEOFError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo data left in file\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "100%|██████████| 1000/1000 [08:46<00:00,  1.90it/s]\n"
      ]
     }
    ],
    "source": [
     "from tqdm import tqdm\n",
     "\n",
-    "imgs = []\n",
+    "ranges_max = []\n",
+    "ranges_min = []\n",
     "\n",
     "for i in tqdm(range(1000)):\n",
-    "    img, pal = data[i]\n",
-    "    imgs.append(img)"
+    "    img, _ = data[i]\n",
+    "    max_range, min_range = compute_ranges(img)\n",
+    "    ranges_max.append(max_range)\n",
+    "    ranges_min.append(min_range)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([98.67296 , 32.142532, 48.51917 ], dtype=float32),\n",
+       " array([  0.7733834, -25.889784 , -40.094276 ], dtype=float32))"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(ranges_max).mean(axis=0), np.array(ranges_min).mean(axis=0)"
    ]
   }
  ],
